# TIDAL

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: ema_preproc.py  generate_trials_tidal.py  graham_weighted_hr.py  hrv_extraction.py  inspect_xdf.py  lsl_preproc.py  merge_interrupted_session.py  questionnaire_preproc.py  segmenting.py  systole_editor_fixed.py  vr_preproc.py  vr_summary_by_speed.py
